# gdnative_cpp_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: Main.gd  Main.tscn
src/: gdexample.cpp
